# bevy-platformer

./: .gitignore  Cargo.toml  notes.md
assets/: physics-testing.ldtk  test-world.json  test-world.ldtk  test_map.tmx
assets/maps/: physics-testing.ldtk  test-world.ldtk  test-world2.ldtk
assets/test-world/backups/: test-world___2021-10-14__21-50-57__crash.backup.ldtk
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
src/animation/: mod.rs
src/camera/: mod.rs  parallax.rs
src/collision/: mod.rs
src/kinematic/: colliders.rs  kinematic.rs  mod.rs
src/ldtk/: ldtk_json.rs  mod.rs
src/physics/: body.rs  collision.rs  mod.rs
src/player/: mod.rs  player_animation.rs  player_physics.rs
