[package]
name = "platformer"
version = "0.1.0"
authors = ["Eric Nowac <enowac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_canvas = "0.1"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", features = ["tiled_map"]}
fastapprox = "0.3.0"
bevy_rapier2d = { version = "0.10.2", features = [ "simd-stable", "render" ] }
macros = { path="macros" }