[package]
name = "platformer"
version = "0.1.0"
authors = ["Eric Nowac <enowac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_canvas = "0.1"
ldtk_rust = "0.5.2"
fastapprox = "0.3.0"
bevy_mod_debugdump = "0.2"
bevy_egui = "0.7"
macros = { path="macros" }