[package]
name = "platformer"
version = "0.1.0"
authors = ["Eric Nowac <enowac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
macros = { path="macros" }
bevy = {version="0.5.0", default-features=false}
bevy_webgl2 = {version="0.5.0", optional=true}
bevy_mod_debugdump = "0.2"
bevy_egui = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
fastapprox = "0.3.0"
anyhow = "1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bevy_canvas = {version="0.1"}